--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -23,7 +23,7 @@
     <ul>
         {% for club_member in clubs%}
         <li>
-            {{club_member["name"]}} - {{club_member["points"]}}
+            {{club_member["name"]}}: {{club_member["points"]}} points
         </li>
         <hr />
         {% endfor %}
