--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -18,17 +18,7 @@
 
     Points available: {{club['points']}}
 
-<!--   Begin: Display club's points board    -->
-    <h3>Clubs - Points:</h3>
-    <ul>
-        {% for club_member in clubs%}
-        <li>
-            {{club_member["name"]}}: {{club_member["points"]}} points
-        </li>
-        <hr />
-        {% endfor %}
-    </ul>
-<!--   End: Display club's points board    -->
+    {% include 'includes/clubs_board_snippet.html' %}
 
     <h3>Competitions:</h3>
     <ul>
