--- a/templates/booking.html
+++ b/templates/booking.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <h2>{{competition['name']}}</h2>
-    Places available: {{competition['numberOfPlaces']}}
+    Places available: {{competition['number_of_places']}}
+    </br>
+    Attention: 3 points per place
     <form action="/purchasePlaces" method="post">
         <input type="hidden" name="club" value="{{club['name']}}">
         <input type="hidden" name="competition" value="{{competition['name']}}">
